--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
         <title> Git and GitHub tuorial</title>
     </head>
     <body>
+        <h1> Welcome to workshop</h1>
         Hello, world !
     </body>
 </html>
